cmake_minimum_required(VERSION 3.22)
project(DAY08)

set(CMAKE_CXX_STANDARD 14)

include_directories(1dms_exception)

add_executable(DAY08
        #                1dms_exception/dms_exception.cpp
        #                1dms_exception/dms_exception.h
        #                1dms_exception/main.cpp
        #                2iostream.cpp
        #                3string.cpp
        #                4mystring.cpp
        #                5sstream.cpp
        #                6fsteam-test.cpp
        #                6fstream.cpp
        7decode.cpp)
#        8typeinfo.cpp
#        tempCodeRunnerFile.cpp)
