cmake_minimum_required(VERSION 3.22)
project(DAY09)

set(CMAKE_CXX_STANDARD 14)

add_executable(DAY09
        #        10template_search.cpp
        #        1same_string.cpp
        #        2cast.cpp
        #        3template_func.cpp
        #        4template_sort.cpp
        #        5template_class.cpp
        6template_spec.cpp
        #                7template_spec_class.cpp
        #        8template_mem_spec.cpp
        #        9template_spec_part.cpp
        )
