cmake_minimum_required(VERSION 3.22)
project(DAY11)

set(CMAKE_CXX_STANDARD 14)

include_directories(1template_mempa)

add_executable(DAY11
        #        1template_mempa/beta.cpp
        #        1template_mempa/beta.hpp
        #        1template_mempa/main.cpp
        #        2LCS.cpp
        #        3vector.cpp
        #        4array.cpp
        #        5vector_LCS.cpp
        #        6deque.cpp
        #        7list.cpp
        #        8object_list.cpp
        9forward_list.cpp
        )
