cmake_minimum_required(VERSION 3.22)
project(DAY12)

set(CMAKE_CXX_STANDARD 14)

add_executable(DAY12
        #        1student_sort.cpp
        #        2algorithm.cpp
        #        3foreach_string.cpp
        #        4stack.cpp
        #        5calculate.cpp
        #        6queue.cpp
        #        7priority_queue.cpp
        #        8map.cpp
        )
