cmake_minimum_required(VERSION 3.22)
project(DAY13_C__11)

set(CMAKE_CXX_STANDARD 14)

add_executable(DAY13_C__11
        10mystring.cpp
        #        11Lambda.cpp
        #        1select_sort.cpp
        #        2map_vote.cpp
        #        3multimap.cpp
        #        4set.cpp
        #        5qsort.cpp
        #        6init_auto.cpp
        #        7returnback_name.cpp
        #        8new_for.cpp
        #        9right_ref.cpp
        )
