cmake_minimum_required(VERSION 3.22)
#project(C_baseTi CXX)
project(C_baseTi C)
set(CMAKE_C_STANDARD 11)

add_executable(C_everydayquestion
        #        1-Ti.c
        #        2-Ti.c
        #        3-Ti.c
        #        4-Ti.c
        #        5-Ti.c
        #        6-Ti.c
        7-Ti.c
        #        8-Ti.c
        #        9-Ti.c
        #        10-Ti.cpp
        )
