cmake_minimum_required(VERSION 3.22)
project(C_base)

set(CMAKE_CXX_STANDARD 14)

add_executable(C_base
        #        BublleSort.c
        #        BublleSort.cpp
        #        getArrayLength.cpp
        #        SelectSort.c)
        #        InsertSort.c
        #        shellSort.c
        #        quickSort.c
        #        guibingSort.c
        guibingSort1.c
        )
